<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sign_in_ema"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:background="@drawable/sign_in_ema"
    tools:context=".MainActivity">


    <View
        android:id="@+id/rectangle"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rectangle"
        />

    <Button
        android:id="@+id/btn_manu_sign_in"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_sign"
        android:text="@string/sign_in"

        android:textAppearance="@style/sign_in" />

<!--    <Button-->
<!--        android:id="@+id/btn_sign_up"-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginTop="60dp"-->
<!--        android:layout_marginLeft="205dp"-->
<!--        android:background="@drawable/btn_sign"-->
<!--        android:text="@string/sign_up"-->
<!--        android:textAppearance="@style/sign_up"-->
<!--        />-->

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="183dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="25dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="134dp"
        android:text="@string/sign_in"
        android:textAppearance="@style/sign_in_text"
        android:lineSpacingExtra="-6sp"
        android:textSize="44dp"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="86dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="25dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="210dp"
        android:text="@string/email"
        android:textAppearance="@style/email"
        android:textSize="26sp"
        android:gravity="top"
        />
    <TextView
        android:id="@+id/sign_in_wit"
        android:layout_width="134dp"
        android:layout_height="22.07dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="257dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="210dp"
        android:text="@string/sign_in_wit"
        android:textAppearance="@style/sign_in_wit"
        android:gravity="right|top"
        />

    <View
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/component_1"
        android:layout_width="366dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:background="@drawable/component_1"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="366dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="250dp"
        android:hint="@string/enter_your_email"
        android:textAppearance="@style/enter_your_email"
        />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="330dp"
        android:gravity="top"
        android:text="@string/password"
        android:textAppearance="@style/email"
        android:textSize="26sp" />

    <View
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/component_2"
        android:layout_width="366dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="370dp"
        android:background="@drawable/component_1"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="366dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="370dp"
        android:hint="@string/enter_your_email"
        android:textAppearance="@style/enter_your_email"
        />

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="123dp"
        android:layout_height="22.07dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="435dp"
        android:text="@string/forgot_pass"
        android:textAppearance="@style/forgot_pass"
        android:gravity="top"
        />

    <Button
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/btn_sign_in"
        android:layout_width="366dp"
        android:layout_height="70.12dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="25dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="500dp"
        android:background="@drawable/rectangle_2"
        android:text="@string/sign_in"
        android:textSize="28dp"
        android:textAppearance="@style/sign_in2"
        android:gravity="center_horizontal|top"
        />

</RelativeLayout>